--- a/tic_tac_toe_game.ipynb
+++ b/tic_tac_toe_game.ipynb
@@ -13,7 +13,7 @@
    "id": "d3a1985a",
    "metadata": {},
    "source": [
-    "This notebook contains a simple Tic Tac Toe game implemented using Python's Tkinter. The code is divided into sections for better readability."
+    "This notebook contains a simple Tic Tac Toe game implemented using Python's Tkinter. The code is divided into sections for better readability and used procedural programming"
    ]
   },
   {
